syntax = "proto3";

package pb;

import "trace.proto";
import "span.proto";

message TracePayload {
        string hostName = 1;
        string env = 2;
        repeated APITrace traces = 3;
        repeated Span transactions = 4;
}
